@@ -1,11 +1,17 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 2;
+use Test::More 'tests' => 3;
 use Test::NoWarnings;
+use Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun;
 use Wikibase::Datatype::Lexeme;
 
 # Test.
 my $obj = Wikibase::Datatype::Lexeme->new;
 my $ret = $obj->id;
 is($ret, undef, 'Get default id.');
+
+# Test.
+$obj = Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun->new;
+$ret = $obj->id;
+is($ret, 'L469', 'Get id (L469).');
